z-index fixes

--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -1,7 +1,7 @@
 .companions {
   position: relative;
   top: -75px;
-  z-index: -2;
+  z-index: 8;
 
   background-color: @dark-blue;
   border-bottom-left-radius: 10px;
