--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,7 +1,7 @@
 .contacts {
   position: relative;
   top: -97px;
-  z-index: -5;
+  z-index: 5;
 
   padding-bottom: 35px;
 
