--- a/source/less/blocks/cta.less
+++ b/source/less/blocks/cta.less
@@ -1,7 +1,7 @@
 .cta {
   position: relative;
   top: -90px;
-  z-index: -4;
+  z-index: 6;
   background-color: #192144;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -30,6 +30,8 @@
 
   &--link-color {
     color: @light-yellow;
+
+    cursor: pointer;
   }
 }
 
