--- a/source/less/blocks/directions.less
+++ b/source/less/blocks/directions.less
@@ -1,7 +1,7 @@
 .directions {
   position: relative;
   top: -32px;
-  z-index: -1;
+  z-index: 9;
 
   padding-bottom: 30px;
 
