--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,7 +1,7 @@
 .main-nav {
   position: absolute;
   top: 77px;
-  z-index: 1;
+  z-index: 15;
 
   display: none;
   flex-direction: column;
