--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,6 +1,6 @@
 .page-footer {
   position: absolute;
-  z-index: -5;
+  z-index: 1;
   bottom: -143px;
   left: 50%;
 
