--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -8,7 +8,7 @@
 
 .page-header__wrapper {
   position: relative;
-  z-index: 1;
+  z-index: 11;
 
   display: flex;
   flex-wrap: wrap;
