--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,7 +1,7 @@
 .promo {
   position: relative;
   top: -80px;
-  z-index: -3;
+  z-index: 7;
 
   padding-bottom: 40px;
 
