--- a/source/less/blocks/service.less
+++ b/source/less/blocks/service.less
@@ -1,7 +1,7 @@
 .service {
   position: relative;
   top: -10px;
-  z-index: 1;
+  z-index: 10;
   padding-top: 280px;
 
   background-color: #192144;
